--- a/package.json
+++ b/package.json
@@ -5,90 +5,58 @@
   "author": "Rasta <hudak.rastislav@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "npm run dev",
-    "build": "node build/build.js",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/e2e/specs",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "svg": "vsvg -s ./svg-icons -t ./src/compiled-icons"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "base-64": "^0.1.0",
-    "es6-promise": "^4.2.5",
-    "growl": "^1.10.5",
+    "core-js": "^2.6.5",
     "moment": "^2.24.0",
-    "phaidra-vue-components": "^0.3.34",
-    "qs": "^6.6.0",
-    "vue": "^2.6.6",
-    "vue-i18n": "^7.8.1",
-    "vue-json-pretty": "^1.4.1",
-    "vue-router": "^2.7.0",
+    "phaidra-vue-components": "^0.3.36",
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.11.2",
+    "vue-json-pretty": "^1.6.0",
+    "vue-router": "^3.0.6",
     "vuetify": "^1.5.14",
-    "vuex": "^3.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.4.2",
-    "chromedriver": "^2.46.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.19.1",
-    "nightwatch": "^1.0.19",
-    "opn": "^5.4.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.3",
-    "selenium-server": "^3.141.59",
-    "semver": "^5.6.0",
-    "shelljs": "^0.7.6",
-    "style-loader": "^0.19.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^13.7.3",
-    "vue-style-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "vue-svgicon": "^3.2.6",
-    "vue-template-compiler": "^2.6.6",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.2.1"
+    "vue-template-compiler": "^2.6.10"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "standard"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
